--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   crypto: 2.1.3
   sqflite: 1.3.0
   path_provider: 1.6.5
+  nfc_in_flutter: 2.0.4
 
 dev_dependencies:
   flutter_test:
