--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 0.1.3
+  cupertino_icons: ^0.1.3
   crypto: 2.1.3
   sqflite: 1.3.0
   path_provider: 1.6.5
   nfc_in_flutter: 2.0.4
+  community_material_icon: 3.5.95
+  flushbar: 1.9.1
 
 dev_dependencies:
   flutter_test:
