--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   crypto: 2.1.3
   sqflite: 1.3.0
   path_provider: 1.6.5
-  nfc_in_flutter: 2.0.4
+  nfc_manager: 1.4.0-dev+2
   community_material_icon: 3.5.95
   flushbar: 1.9.1
 
