--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   crypto: 2.1.3
+  encrypt: 4.0.0
   sqflite: 1.3.0
   path_provider: 1.6.5
   nfc_manager: 1.4.0-dev+2
