--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,11 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            // applicationVariants.all { variant ->
+            //     variant.outputs.all {
+            //         outputFileName = "${applicationId}_${variant.name}-${variant.versionName}.apk"
+            //     }
+            // }
         }
     }
 }
