--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Yeah! Passwords project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: '>=2.1.0 <3.0.0'
@@ -20,14 +20,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.3
-  crypto: 2.1.4
-  encrypt: 4.0.0
-  sqflite: 1.3.0
-  path_provider: 1.6.5
-  nfc_manager: 1.4.0-dev+2
-  community_material_icon: 3.5.95
-  flushbar: 1.10.0
+  cupertino_icons: ^1.0.3
+  crypto: 3.0.1
+  encrypt: 5.0.0
+  sqflite: 2.0.0+3
+  path_provider: 2.0.2
+  nfc_manager: 3.1.0
+  community_material_icon: 5.9.55
+  flushbar: 1.10.4
   flappy_search_bar: 1.7.2
 
 dev_dependencies:
